syntax = "proto3";

package product;

service Product {
  rpc GetProduct (ProductRequest) returns (ProductResponse) {}
}

message ProductRequest {
  int32 id = 1;
}

message ProductResponse {
  int32 id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
}
